objects/Quote_Approval_Config__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Type__c</fullName>
        <label>Approval Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deal Size</fullName>
                </value>
                <value>
                    <fullName>Discount Size</fullName>
                </value>
                <value>
                    <fullName>ELA</fullName>
                </value>
                <value>
                    <fullName>3rd Party</fullName>
                </value>
                <value>
                    <fullName>Special Offer Terms</fullName>
                </value>
                <value>
                    <fullName>Product Specific Discount</fullName>
                </value>
                <value>
                    <fullName>Discount Override</fullName>
                </value>
                <value>
                    <fullName>Pricing Model - Concurrent</fullName>
                </value>
                <value>
                    <fullName>Expiration Date</fullName>
                </value>
                <value>
                    <fullName>Care Override</fullName>
                </value>
                <value>
                    <fullName>Term Reduced</fullName>
                </value>
                <value>
                    <fullName>Term Increased</fullName>
                </value>
                <value>
                    <fullName>Service Level - Decline</fullName>
                </value>
                <value>
                    <fullName>Revision</fullName>
                </value>
                <value>
                    <fullName>Product Management</fullName>
                </value>
                <value>
                    <fullName>CAD Override</fullName>
                </value>
                <value>
                    <fullName>Premium Care</fullName>
                </value>
                <value>
                    <fullName>GU Override</fullName>
                </value>
                <value>
                    <fullName>BEP Override</fullName>
                </value>
                <value>
                    <fullName>Additional Legal Terms</fullName>
                </value>
                <value>
                    <fullName>Editable List Price</fullName>
                </value>
                <value>
                    <fullName>Require Separate Quote for Genesys Care - Notification</fullName>
                </value>
                <value>
                    <fullName>Future Products - Notification</fullName>
                </value>
                <value>
                    <fullName>Profressional Services - Notification</fullName>
                </value>
                <value>
                    <fullName>Minor Quote Change Approval</fullName>
                </value>
                <value>
                    <fullName>Third Party Care Override</fullName>
                </value>
                <value>
                    <fullName>Finance Exception Approval</fullName>
                </value>
                <value>
                    <fullName>Legal Exception Approval</fullName>
                </value>
                <value>
                    <fullName>Priority/VIP Priority Support</fullName>
                </value>
                <value>
                    <fullName>Base Agent Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Care_Override_Threshold__c</fullName>
        <label>Care Override Threshold</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Override &lt; 2 %</fullName>
                </value>
                <value>
                    <fullName>Override 2 - 3 %</fullName>
                </value>
                <value>
                    <fullName>Override &gt; 3%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <label>Criteria</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Doesn_t_Depend_on_Region_Sub_Region__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Doesn&apos;t Depend on Region/Sub Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Of_Days_After_Quote_Expires__c</fullName>
        <label>No Of Days After Quote Expires</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offering_Type__c</fullName>
        <label>Offering Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Quote_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Only_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Only Approval?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Model__c</fullName>
        <label>Pricing Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enabled</fullName>
                </value>
                <value>
                    <fullName>Concurrent</fullName>
                </value>
                <value>
                    <fullName>Named User Pricing</fullName>
                </value>
                <value>
                    <fullName>PPU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Type__c</fullName>
        <label>Pricing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Pricing</fullName>
                </value>
                <value>
                    <fullName>Old Pricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Offering_Type__c</fullName>
        <label>Quote Offering Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Edition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Type__c</fullName>
        <defaultValue>&apos;On Premise&apos;</defaultValue>
        <label>Quote Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Details__c</fullName>
        <label>Region Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Threshold_From_Details__c</fullName>
        <label>Threshold From Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Threshold_From__c</fullName>
        <label>Threshold From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Threshold_Price_From__c</fullName>
        <label>Threshold Price From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Threshold_Price_To__c</fullName>
        <label>Threshold Price To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Threshold_To__c</fullName>
        <label>Threshold To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Quote Approval Config</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Approval_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Quote_Type__c</columns>
        <columns>Offering_Type__c</columns>
        <columns>Care_Override_Threshold__c</columns>
        <columns>Threshold_From__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BE_Cloud</fullName>
        <columns>NAME</columns>
        <columns>Approval_Type__c</columns>
        <columns>Pricing_Model__c</columns>
        <columns>Active__c</columns>
        <columns>Threshold_From__c</columns>
        <columns>Quote_Type__c</columns>
        <columns>Offering_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Quote_Offering_Type__c</field>
            <operation>equals</operation>
            <value>Business Edition</value>
        </filters>
        <label>BE Cloud</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Deal_Score</fullName>
        <columns>NAME</columns>
        <columns>Approval_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Threshold_From__c</columns>
        <columns>Criteria__c</columns>
        <columns>Quote_Type__c</columns>
        <columns>Region_Details__c</columns>
        <columns>Offering_Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Type__c</field>
            <operation>equals</operation>
            <value>Deal Score</value>
        </filters>
        <filters>
            <field>Offering_Type__c</field>
            <operation>includes</operation>
            <value>PureEngage On Premise</value>
        </filters>
        <label>Deal Score</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_Pricing</fullName>
        <columns>NAME</columns>
        <columns>Approval_Type__c</columns>
        <columns>Pricing_Model__c</columns>
        <columns>Active__c</columns>
        <columns>Threshold_From__c</columns>
        <columns>Quote_Type__c</columns>
        <columns>Quote_Offering_Type__c</columns>
        <columns>Care_Override_Threshold__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>New Pricing</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Old_Pricing</fullName>
        <columns>NAME</columns>
        <columns>Approval_Type__c</columns>
        <columns>Pricing_Model__c</columns>
        <columns>Active__c</columns>
        <columns>Threshold_From__c</columns>
        <columns>Quote_Type__c</columns>
        <columns>Quote_Offering_Type__c</columns>
        <columns>Care_Override_Threshold__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Pricing_Type__c</field>
            <operation>equals</operation>
            <value>Old Pricing</value>
        </filters>
        <label>Old Pricing</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Partner_Only_Approvals</fullName>
        <columns>NAME</columns>
        <columns>Approval_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Quote_Type__c</columns>
        <columns>Offering_Type__c</columns>
        <columns>Care_Override_Threshold__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Only_Approval__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Partner Only Approvals</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Product_Management</fullName>
        <columns>NAME</columns>
        <columns>Approval_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Quote_Type__c</columns>
        <columns>Offering_Type__c</columns>
        <columns>Threshold_From__c</columns>
        <columns>Threshold_To__c</columns>
        <columns>Threshold_Price_From__c</columns>
        <columns>Threshold_Price_To__c</columns>
        <columns>Region_Details__c</columns>
        <columns>Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Approval_Type__c</field>
            <operation>equals</operation>
            <value>Product Specific Discount,Product Management</value>
        </filters>
        <label>Product Management</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Professional_Services_Discount_Queue_Quote_Approval_Config</fullName>
        <filterScope>Queue</filterScope>
        <label>Professional Services</label>
        <queue>Professional_Services_Discount_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PureCloud</fullName>
        <columns>NAME</columns>
        <columns>Approval_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Offering_Type__c</columns>
        <columns>Threshold_From__c</columns>
        <columns>Threshold_To__c</columns>
        <columns>Threshold_Price_From__c</columns>
        <columns>Threshold_Price_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Offering_Type__c</field>
            <operation>includes</operation>
            <value>PureCloud</value>
        </filters>
        <label>PureCloud</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PureConnect_Cloud</fullName>
        <columns>NAME</columns>
        <columns>Approval_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Offering_Type__c</columns>
        <columns>Threshold_From__c</columns>
        <columns>Threshold_To__c</columns>
        <columns>Threshold_Price_From__c</columns>
        <columns>Threshold_Price_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Offering_Type__c</field>
            <operation>includes</operation>
            <value>PureConnect Cloud</value>
        </filters>
        <label>PureConnect Cloud</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PureConnect_On_Premise</fullName>
        <columns>NAME</columns>
        <columns>Approval_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Quote_Type__c</columns>
        <columns>Quote_Offering_Type__c</columns>
        <columns>Offering_Type__c</columns>
        <columns>Threshold_From__c</columns>
        <columns>Threshold_To__c</columns>
        <columns>Threshold_Price_From__c</columns>
        <columns>Threshold_Price_To__c</columns>
        <columns>Region_Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Offering_Type__c</field>
            <operation>includes</operation>
            <value>PureConnect On Premise</value>
        </filters>
        <label>Pure On Premise</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PureConnect_Subscription</fullName>
        <columns>NAME</columns>
        <columns>Approval_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Threshold_Price_From__c</columns>
        <columns>Threshold_Price_To__c</columns>
        <columns>Threshold_From__c</columns>
        <columns>Threshold_To__c</columns>
        <columns>Offering_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Offering_Type__c</field>
            <operation>includes</operation>
            <value>PureConnect Subscription</value>
        </filters>
        <label>PureConnect Subscription</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PureConnect_and_PureCloud</fullName>
        <booleanFilter>1 or 2 or 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Approval_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Offering_Type__c</columns>
        <columns>Threshold_From__c</columns>
        <columns>Threshold_To__c</columns>
        <columns>Threshold_Price_From__c</columns>
        <columns>Threshold_Price_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Offering_Type__c</field>
            <operation>includes</operation>
            <value>PureConnect Cloud</value>
        </filters>
        <filters>
            <field>Offering_Type__c</field>
            <operation>includes</operation>
            <value>PureConnect On Premise</value>
        </filters>
        <filters>
            <field>Offering_Type__c</field>
            <operation>includes</operation>
            <value>PureCloud</value>
        </filters>
        <label>PureConnect and PureCloud</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PureEngage_Cloud</fullName>
        <columns>NAME</columns>
        <columns>Approval_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Offering_Type__c</columns>
        <columns>Threshold_From__c</columns>
        <columns>Threshold_To__c</columns>
        <columns>Threshold_Price_From__c</columns>
        <columns>Threshold_Price_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Offering_Type__c</field>
            <operation>includes</operation>
            <value>PureEngage Cloud</value>
        </filters>
        <label>PureEngage Cloud</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PureEngage_Cloud_PPU</fullName>
        <columns>NAME</columns>
        <columns>Approval_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Offering_Type__c</columns>
        <columns>Threshold_From__c</columns>
        <columns>Threshold_To__c</columns>
        <columns>Threshold_Price_From__c</columns>
        <columns>Threshold_Price_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Quote_Type__c</field>
            <operation>contains</operation>
            <value>Cloud Partner (PPU)</value>
        </filters>
        <label>PureEngage Cloud PPU</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>QA-{000000}</displayFormat>
        <label>Quote Approval Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Approval Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>